@@ -1,6 +1,8 @@
 2014-03-07
 ==========
 * Adding appendRow to TightdbTable.
+* Adding object subscripting.
+
 
 2014-03-05
 ==========
